haciendo tests area  groups
