# public/yaml/apidocs_v3_1.yml
@@ -3637,6 +3637,56 @@ paths:
           description: Unauthorized
         '404':
           description: Not found
+    patch:
+      summary: archiva/restaura observaciones
+      # nickname: deleteObservaciones
+      security:
+      - cookieAuth: []
+      parameters:
+      - name: tipo
+        description: tipo de observación
+        required: true
+        schema: { "type": "string"} 
+        enum:
+        - puntual
+        - areal
+        - raster
+        in: path
+      - name: series_id
+        description: id de la serie
+        required: true
+        schema: { "type": "integer"} 
+        in: path
+      - name: timestart
+        description: fecha inicial de las observaciones
+        required: true
+        schema: { "type": "string"} 
+        in: body
+      - name: timeend
+        description: fecha final de las observaciones
+        required: true
+        schema: { "type": "string"} 
+        in: body
+      - name: archived
+        description: "true: archiva, false: restaura"
+        required: true
+        schema: { "type": "boolean"} 
+        in: body
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/Observacion"
+        '400':
+          description: Bad request
+        '401':
+          description: Unauthorized
+        '404':
+          description: Not found
   "/obs/{tipo}/series/{series_id}/observaciones/{id}":
     get:
       summary: obtiene la observación indicada
